--- a/PDF1/requirements.txt
+++ b/PDF1/requirements.txt
@@ -1,1 +1,1 @@
-flask_bootstrap flask_wtf wtforms flask_admin flask_ngrok email_validator flask_sqlalchemy flask_login tika arxiv pymongo
+this is folder wehere files will be saved
