--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,3 @@
-here files will be stored
+libs to be installed
+
+pip3 install https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz
